[tool.poetry]
name = "nsarchive"
version = "1.2.3"
description = ""
authors = ["happex <110610727+okayhappex@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
deta = "^1.2"
pillow = "^10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
