[tool.poetry]
name = "nsarchive"
version = "2.0.0-alpha.2"
description = "API-wrapper pour récupérer des données liées à Nation"
authors = ["happex <110610727+okayhappex@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
supabase = "^2.9.1"
pillow = "^10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
